Update Arithmetic and Variables.ipynb

--- a/mes_codes/Arithmetic and Variables.ipynb
+++ b/mes_codes/Arithmetic and Variables.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "# 1- Printing = Affichage\n",
+    "# 1- Printing\n",
     "---"
    ]
   },
@@ -60,7 +60,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "# 2- Arithmetic = Arithmétique\n",
+    "# 2- Arithmetic\n",
     "---\n",
     "    Addition\n",
     "    Soustration\n",
